Refactor search results template and remove obsolete Elasticsearch test script

--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -3,7 +3,9 @@
 {% block content %}
 <h1>{{ _('Search Results') }}</h1>
 {% for symptomlog in symptomlogs %}
-{% include '_post.html' %}
+	{% include '_post.html' %}
+{% else %}
+	<p>{{ _('No results found.') }}</p>
 {% endfor %}
 <nav aria-label="Symptomlog navigation">
 	<ul class="pagination">
